# repro-9273

./: Cargo.toml  default.nix  shell.nix
go/: main.go
src/: main.rs
